--- a/lifeonchain/activity/movie/index.html
+++ b/lifeonchain/activity/movie/index.html
@@ -6,20 +6,23 @@
     <link rel="shortcut icon" href="/img/favicon.ico"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
 
-    <link rel="canonical" href="http://loc2019.lifeonchain.today/movie.html"/>
+    <link rel="canonical" href="http://loc2019.lifeonchain.today/activity/movie/"/>
     <meta property="og:site_name" content="Life on Chain"/>
-    <meta property="og:url" content="http://loc2019.lifeonchain.today/movie.html"/>
+    <meta property="og:url" content="http://loc2019.lifeonchain.today/activity/movie/"/>
     <meta property="og:image" content="http://loc2019.lifeonchain.today/img/main-figure.jpg"/>
-    <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 電影"/>
+    <meta property="og:title" content="2019 鏈上生活節 Life on Chain! - 大盜影城"/>
     <meta property="og:description" content="從今天起！鏈上生活節！"/>
 
-    <meta name="title" content="2019 鏈上生活節 Life on Chain! - 電影"/>
+    <meta name="title" content="2019 鏈上生活節 Life on Chain! - 大盜影城"/>
     <meta name="description" content="從今天起！鏈上生活節！"/>
     <meta name="keywords" content="2019,生活節,鏈上生活節,區塊鏈,聖人大盜,鏈上講堂,生活市集,alysida,zombit,lifeonchain,Life on Chain,blockchain"/>
     <meta name="robots" content="index, follow">
 
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- Google Fonts - Noto Sans TC -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
@@ -60,37 +63,39 @@
     </nav>
 
     <div class="section-wrapper">
-        <section style="background-color: #FFFF00; height: 300px;">
+        <section class="shape shape-bottom-right-left shape-yellow" id="activity_logo_section">
+            <div class="section-container" style="margin-top: 100px;">
+                <div class="container" style="padding-top: 2rem; text-align: left;">
+                    <img src="/img/movie-detail-logo.png" class="intro-detail-img img-fluid" id="activity_logo_img" />
+                </div>
+            </div>
+        </section>
+
+        <section style="margin-top: -100px; z-index: 0; width: 100vw; height: 90vh; background-image: url('/img/movie-page.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;" id="location_img">
+        </section>
+    
+        <section class="shape shape-left-right shape-blue" id="activity_section">
             <div class="section-container">
-                <div class="container" style="padding-top: 2rem;">
-                    <img src="/img/the-last-thieves.png" class="intro-img img-fluid" />
-                </div>
-            </div>
-        </section>
-
-        <section class="shape shape-left-right shape-blue" style="height: 1500px;">
-            <div class="section-container margin-150">
                 <div class="container">
-                    <iframe width="932" height="524" src="https://www.youtube.com/embed/M-5mF8-QgXk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                    <img src="/img/movie-schedule.png" class="intro-img img-fluid" style="margin-top: 150px;" />
+                    <iframe src="https://www.youtube.com/embed/M-5mF8-QgXk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%; height: 50vh;"></iframe>
+                    <p class="mt-4">全世界首部區塊鏈商戰電影「聖人大盜」，全台最大五百人包場就在鏈上生活節大盜影城！</p>
+                    <p>本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
+                    <p>尹子翔（曹晏豪 飾演）是個懷抱著未來夢想的年輕創業家，嚮往著藉由區塊鏈技術，擺脫舊經濟邏輯，創建新世代的經濟秩序，重建去中心化世界的新金融模式，擺脫財團綁架的金融新世界。他帶著其女友陳曦（曾之喬 飾演）及夥伴一同努力，與睿智冷酷的基金公司總經理徐菁（賴雅妍 飾演）、老謀深算的財團老闆林明衍（曾志偉 飾演）、金管署長陳法同（高英軒 飾演），奮力周旋對抗。</p>
+                    <p>面對現實的摧殘、夥伴的背叛，還有一層層更加殘酷的社會寫實真相，尹子翔開始自問：理想與現實的差距，究竟還有多少？想完成夢想，究竟還需要犧牲多少？而自己，究竟是帶給世界美好的聖人；抑或，只是披著羊皮的狼人大盜？究竟，無名小卒的他們，能否從金字塔頂端的人們手中拿回世界的自主權呢？</p>
                 </div>
             </div>
-        </section>
-
-        <section class="shape shape-left-right shape-orange" style="height: 200px;">  
         </section>
     </div>
 
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <img class="organizer-img" src="/img/organizer.png" />
                     <img src="/img/lifeonchain-logo.png" />
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="countdown-container">
                         <div class="countdown-block">
                             <p class="countdown-digit" id="countdown_day">00</p>
@@ -110,9 +115,29 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4">
+                    <div class="social-links">
+                        <li>
+                            <a href="https://www.facebook.com/LifeOnChain/" target="_blank" style="padding: 1px 13px;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/%E9%8F%88%E4%B8%8A%E7%94%9F%E6%B4%BB" target="_blank" style="padding: 0px 5px;">
+                                <i class="fab fa-medium-m"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:brucesu@zombit.info" style="padding: 1px 6px;">
+                                <i class="fa fa-envelope"></i>
+                            </a>
+                        </li>
+                    </div>
+                </div>
             </div>
         </div>
-    </footer>
+    </footer>  
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -122,7 +147,31 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Custom scripts -->
+    <script>
+        var slope = 0.12;
+    </script>
+
     <script src="/js/main.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            setTimeout(function(){
+                changeHeight();
+            }, 350);
+        });
+
+        $(window).on('resize', function(){
+            changeHeight();
+        });
+
+        function changeHeight(){
+            var height = $(window).height();
+            var width = $(window).width();
+            $('#activity_logo_section').css('height', $('#activity_logo_img').height()+70+'px');
+            $('#location_img').css('margin-top', '-'+$('#activity_logo_section').css('border-bottom-width'));
+            $('#activity_section').css('height', $('#activity_section').find('.section-container').height()+parseInt($('#activity_section').css('border-top-width'))+30+'px');
+        }
+    </script>
 
 </body>
 </html>
