--- a/lifeonchain/index.html
+++ b/lifeonchain/index.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <!-- Google Fonts - Noto Sans TC -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
 
@@ -73,60 +76,77 @@
     
         <section class="shape shape-right-left shape-yellow shape-intro" style="height: 550px;">
             <div class="section-container">
-                <div class="row">
-                    <div class="col-md-8 col-lg-6">
-                        <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/movie-page.jpg');"></div>
-                    </div>
-                    <div class="col-md-4 col-lg-6">
-                        <img src="/img/movie-logo.png" class="intro-img img-fluid mt-4 mb-4" />
-                        <p>全台最大五百人共同觀影！到大盜影城一起觀賞今年秋季強檔國片，全球首部區塊鏈商戰電影「聖人大盜」。</p>
-                        <p>聖人大盜為本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
-                    </div>
+                <div class="container">
+                    <a href="/activity/movie/">
+                        <div class="row">
+                            <div class="col-md-8 col-lg-6">
+                                <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/movie-page.jpg');"></div>
+                            </div>
+                            <div class="col-md-4 col-lg-6">
+                                <img src="/img/movie-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                                <p>全台最大五百人共同觀影！到大盜影城一起觀賞今年秋季強檔國片，全球首部區塊鏈商戰電影「聖人大盜」。</p>
+                                <p>聖人大盜為本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
 
         <section class="shape shape-left-right shape-blue shape-intro" style="height: 550px;">
             <div class="section-container">
-                <div class="row">
-                    <div class="col-md-4 order-md-1 order-sm-2 order-2 col-lg-6">
-                        <img src="/img/market-logo.png" class="intro-img img-fluid mt-4 mb-4" />
-                        <p>當區塊鏈進入生活，會呈現什麼樣的樣貌？</p>
-                        <p>到生活市集現場體驗區塊鏈支付方式、各類商販與小遊戲等，我們更與社群合作，在現場提供問題解惑與區塊鏈應用教學，以最新穎的模式享受美食與逛街體驗。</p>
-                    </div>
-                    <div class="col-md-8 order-md-2 order-sm-1 order-1 col-lg-6">
-                        <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/market-page.jpg')"></div>
-                    </div>
+                <div class="container">
+                    <a href="/activity/market/">
+                        <div class="row">
+                            <div class="col-md-4 order-md-1 order-sm-2 order-2 col-lg-6">
+                                <img src="/img/market-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                                <p>當區塊鏈進入生活，會呈現什麼樣的樣貌？</p>
+                                <p>到生活市集現場體驗區塊鏈支付方式、各類商販與小遊戲等，我們更與社群合作，在現場提供問題解惑與區塊鏈應用教學，以最新穎的模式享受美食與逛街體驗。</p>
+                            </div>
+                            <div class="col-md-8 order-md-2 order-sm-1 order-1 col-lg-6">
+                                <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/market-page.jpg')"></div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
+                
             </div>
         </section>
 
         <section class="shape shape-right-left shape-yellow shape-intro" style="height: 550px;">
             <div class="section-container">
-                <div class="row">
-                    <div class="col-md-8 col-lg-6">
-                        <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/lecture-page.jpg');"></div>
-                    </div>
-                    <div class="col-md-4 col-lg-6">
-                        <img src="/img/lecture-logo.png" class="intro-img img-fluid mt-4 mb-4" />
-                        <p>到鏈上講堂感受區塊鏈產業最新的脈動，發掘各種令人激動的使用可能性。</p>
-                        <p>我們將邀請知名的產業人士來到現場，跟大家分享區塊鏈是如何跟我們的生活產生連結，成為我們生活中不可或缺的一部分。</p>
-                    </div>
+                <div class="container">
+                    <a href="/activity/lecture/">
+                        <div class="row">
+                            <div class="col-md-8 col-lg-6">
+                                <div class="trapezoid-img trapezoid-img-left" style="background-image: url('/img/lecture-page.jpg');"></div>
+                            </div>
+                            <div class="col-md-4 col-lg-6">
+                                <img src="/img/lecture-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                                <p>到鏈上講堂感受區塊鏈產業最新的脈動，發掘各種令人激動的使用可能性。</p>
+                                <p>我們將邀請知名的產業人士來到現場，跟大家分享區塊鏈是如何跟我們的生活產生連結，成為我們生活中不可或缺的一部分。</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
 
         <section class="shape shape-left-right shape-blue shape-intro" style="height: 550px;">
             <div class="section-container">
-                <div class="row">
-                    <div class="col-md-4 order-md-1 order-sm-2 order-2 col-lg-6">
-                        <img src="/img/qa-logo.png" class="intro-img img-fluid mt-4 mb-4" />
-                        <p>「想要百萬好禮嗎？想要的就來玩吧！我把所有的財寶都放在鏈上生活節了！」你是不知道答案，還是害怕回答？</p>
-                        <p>趕緊找尋你的隊友，一起成為區塊鏈知識王，狩獵百萬獎金！</p>
-                    </div>
-                    <div class="col-md-8 order-md-2 order-sm-1 order-1 col-lg-6">
-                        <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/qa-page.jpg')"></div>
-                    </div>
+                <div class="container">
+                    <a href="/activity/quiz-competition/">
+                        <div class="row">
+                            <div class="col-md-4 order-md-1 order-sm-2 order-2 col-lg-6">
+                                <img src="/img/qa-logo.png" class="intro-img img-fluid mt-4 mb-4" />
+                                <p>「想要百萬好禮嗎？想要的就來玩吧！我把所有的財寶都放在鏈上生活節了！」你是不知道答案，還是害怕回答？</p>
+                                <p>趕緊找尋你的隊友，一起成為區塊鏈知識王，狩獵百萬獎金！</p>
+                            </div>
+                            <div class="col-md-8 order-md-2 order-sm-1 order-1 col-lg-6">
+                                <div class="trapezoid-img trapezoid-img-right" style="background-image: url('/img/qa-page.jpg')"></div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -139,10 +159,15 @@
 
         <section class="shape shape-right-left shape-blue" style="height: 50vw;">
             <div class="section-container">
+                <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <img src="" class="img-fluid" id="countdown_img">
+                        <a href="/ticket">
+                            <img class="img-fluid" style="max-width: 300px; width: 100%;" src="/img/signup.png"/>
+                        </a>
                     </div>
+                </div>
                 </div>
             </div>
         </section>
@@ -151,12 +176,12 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <img class="organizer-img" src="/img/organizer.png" />
                     <img src="/img/lifeonchain-logo.png" />
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="countdown-container">
                         <div class="countdown-block">
                             <p class="countdown-digit" id="countdown_day">00</p>
@@ -174,6 +199,26 @@
                             <p class="countdown-digit" id="countdown_sec">00</p>
                             <p class="countdown-text">Seconds</p>
                         </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links">
+                        <li>
+                            <a href="https://www.facebook.com/LifeOnChain/" target="_blank" style="padding: 1px 13px;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/%E9%8F%88%E4%B8%8A%E7%94%9F%E6%B4%BB" target="_blank" style="padding: 0px 5px;">
+                                <i class="fab fa-medium-m"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:brucesu@zombit.info" style="padding: 1px 6px;">
+                                <i class="fa fa-envelope"></i>
+                            </a>
+                        </li>
                     </div>
                 </div>
             </div>
@@ -218,10 +263,10 @@
             var width = $(window).width();
             $('.shape-intro').each(function(){
                 if(width > 768){
-                    $(this).css('height', $(this).find('.trapezoid-img').height()+parseInt($(this).css('border-top-width'))*2+'px');
+                    $(this).css('height', $(this).find('.col-md-8.col-lg-6').height()+parseInt($(this).css('border-top-width'))*2+'px');
                 }
                 else{
-                    $(this).css('height', $(this).find('.trapezoid-img').height()+$(this).find('.col-lg-6').height()+parseInt($(this).css('border-top-width'))*2+'px');
+                    $(this).css('height', $(this).find('.col-md-8.col-lg-6').height()+$(this).find('.col-lg-6').height()+parseInt($(this).css('border-top-width'))*2+'px');
                 }
             });
             $('#lifeonchain_page_img').css('margin-top', -parseInt($('#lifeonchain_page_section').css('border-top-width')));
