--- a/lifeonchain/partner/index.html
+++ b/lifeonchain/partner/index.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
     <!-- Google Fonts - Noto Sans TC -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&amp;subset=chinese-traditional" rel="stylesheet">
 
@@ -60,24 +63,31 @@
     </nav>
 
     <div class="section-wrapper">
-        <section class="shape shape-right-left shape-yellow" style="height: 350px;">
+        <section class="shape-fill-yellow" style="margin-top: 0px;">
             <div class="section-container">
-                <div class="row">
-                    
+                <div class="container" style="padding: 45px 0 30px;">
+                    <img src="/img/executive_unit.png" class="intro-img img-fluid mb-4"/>
+                    <div class="row justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/zombit.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/alysida.png" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="shape shape-left-right shape-blue" style="height: 51vw;">
+        <section class="shape-fill-blue">
             <div class="section-container">
-                <img src="/img/comingsoon.png" class="img-fluid"/>
-            </div>
-        </section>
-
-        <section class="shape shape-left-right shape-yellow" style="height: 350px;">
-            <div class="section-container">
-                <div class="row">
-                    
+                <div class="container" style="padding: 45px 0 30px;">
+                    <img src="/img/coorganizer_unit.png" class="intro-img img-fluid mb-4"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/grenade.png" class="img-fluid">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -86,12 +96,12 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <img class="organizer-img" src="/img/organizer.png" />
                     <img src="/img/lifeonchain-logo.png" />
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="countdown-container">
                         <div class="countdown-block">
                             <p class="countdown-digit" id="countdown_day">00</p>
@@ -109,6 +119,26 @@
                             <p class="countdown-digit" id="countdown_sec">00</p>
                             <p class="countdown-text">Seconds</p>
                         </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links">
+                        <li>
+                            <a href="https://www.facebook.com/LifeOnChain/" target="_blank" style="padding: 1px 13px;">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/%E9%8F%88%E4%B8%8A%E7%94%9F%E6%B4%BB" target="_blank" style="padding: 0px 5px;">
+                                <i class="fab fa-medium-m"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:brucesu@zombit.info" style="padding: 1px 6px;">
+                                <i class="fa fa-envelope"></i>
+                            </a>
+                        </li>
                     </div>
                 </div>
             </div>
